--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "dependencies": {
         "@inertiajs/inertia": "^0.8.6",
         "@inertiajs/inertia-vue": "^0.5.7",
+        "bootstrap-icons": "^1.4.1",
+        "moment": "^2.29.1",
+        "v-mask": "^2.2.4",
         "vuejs-paginate": "^2.1.0"
     }
 }
